# YOLOSA-World

./: .gitignore  pyproject.toml
yolosa/: __init__.py
yolosa/models/: __init__.py  model.py
yolosa/models/sam/: predictor.py
yolosa/web_demo/: gradio_app.py
